[package]
name = "rttt"
version = "0.1.0"
authors = ["Sasszem <barath.laszlo.szolnok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"

[lib]
name = "rttt"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
doc = false